--- a/CoffeeShopManager/GUI/UserControlManagerShopInfo.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlManagerShopInfo.vi-VN.resx
@@ -134,6 +134,9 @@
   <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>181, 201</value>
+  </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>70, 17</value>
   </data>
@@ -157,6 +160,9 @@
   </data>
   <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
+    <value>184, 297</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>39, 17</value>
