--- a/CoffeeShopManager/GUI/frmEditEmployees.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmEditEmployees.vi-VN.resx
@@ -308,10 +308,13 @@
     <value>91, 17</value>
   </data>
   <data name="label3.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 12pt</value>
+    <value>Tahoma, 10.8pt</value>
+  </data>
+  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>369, 6</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>137, 24</value>
+    <value>132, 23</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
     <value>Sửa nhân viên</value>
