--- a/CoffeeShopManager/GUI/frmRestoreProduct.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmRestoreProduct.vi-VN.resx
@@ -312,4 +312,8 @@
   <data name="lblID.Size" type="System.Drawing.Size, System.Drawing">
     <value>22, 17</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
 </root>
