--- a/CoffeeShopManager/GUI/frmSmallAddProductToList.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmSmallAddProductToList.vi-VN.resx
@@ -173,4 +173,7 @@
   <data name="lblAdd.Text" xml:space="preserve">
     <value>Thêm</value>
   </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
 </root>
