--- a/CoffeeShopManager/GUI/UserControlOrderProduct.resx
+++ b/CoffeeShopManager/GUI/UserControlOrderProduct.resx
@@ -177,8 +177,8 @@
   <data name="&gt;&gt;txtDiscount.Type" xml:space="preserve">
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="panel2.TabIndex" type="System.Int32, mscorlib">
-    <value>12</value>
+  <data name="btnSearch.IconPadding" type="System.Int32, mscorlib">
+    <value>0</value>
   </data>
   <data name="lblDiscount.IconAlignment2" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
     <value>MiddleRight</value>
@@ -279,8 +279,8 @@
   <data name="panel1.IconPadding" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
-  <data name="&gt;&gt;txtSearchName.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="clmDown.MinimumWidth" type="System.Int32, mscorlib">
+    <value>6</value>
   </data>
   <data name="&gt;&gt;lblID.Parent" xml:space="preserve">
     <value>panel2</value>
@@ -585,6 +585,9 @@
   <data name="label1.Error" xml:space="preserve">
     <value />
   </data>
+  <data name="&gt;&gt;lblTotalSum.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="lblLastName.IconAlignment1" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
     <value>MiddleRight</value>
   </data>
@@ -723,9 +726,6 @@
   <data name="txtDiscount.Error" xml:space="preserve">
     <value />
   </data>
-  <data name="clmDown.MinimumWidth" type="System.Int32, mscorlib">
-    <value>6</value>
-  </data>
   <data name="lblOr.IconAlignment" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
     <value>MiddleRight</value>
   </data>
@@ -764,9 +764,6 @@
   </data>
   <data name="lblExcessMon.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
-  </data>
-  <data name="$this.Error1" xml:space="preserve">
-    <value />
   </data>
   <data name="lblHead.Error2" xml:space="preserve">
     <value />
@@ -912,9 +909,6 @@
   <data name="datBirthdate.Error2" xml:space="preserve">
     <value />
   </data>
-  <data name="lblExcessMon.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 140</value>
-  </data>
   <data name="lblLastName.Text" xml:space="preserve">
     <value>Last Name:</value>
   </data>
@@ -931,7 +925,7 @@
     <value>MiddleRight</value>
   </data>
   <data name="lblHead.Text" xml:space="preserve">
-    <value>Oder Products</value>
+    <value>Order Products</value>
   </data>
   <data name="txtID.Error1" xml:space="preserve">
     <value />
@@ -1098,7 +1092,7 @@
     <value>MiddleRight</value>
   </data>
   <data name="lblHead.Size" type="System.Drawing.Size, System.Drawing">
-    <value>220, 36</value>
+    <value>231, 36</value>
   </data>
   <data name="lblFirstName.Location" type="System.Drawing.Point, System.Drawing">
     <value>1, 103</value>
@@ -1129,6 +1123,9 @@
   </data>
   <data name="lblFirstName.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
+  </data>
+  <data name="panel2.TabIndex" type="System.Int32, mscorlib">
+    <value>12</value>
   </data>
   <data name="&gt;&gt;errorProvider1.Type" xml:space="preserve">
     <value>System.Windows.Forms.ErrorProvider, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -1241,8 +1238,8 @@
   <data name="panel4.Location" type="System.Drawing.Point, System.Drawing">
     <value>7, 58</value>
   </data>
-  <data name="lblNoneName.Text" xml:space="preserve">
-    <value>Needn't write Cus</value>
+  <data name="lblOr.Error1" xml:space="preserve">
+    <value />
   </data>
   <data name="&gt;&gt;comboBox1.ZOrder" xml:space="preserve">
     <value>0</value>
@@ -1704,7 +1701,7 @@
     <value>0</value>
   </data>
   <data name="clmQuantity.HeaderText" xml:space="preserve">
-    <value>SL</value>
+    <value>Qty</value>
   </data>
   <data name="&gt;&gt;txtLastName.ZOrder" xml:space="preserve">
     <value>5</value>
@@ -1720,9 +1717,6 @@
   </data>
   <data name="$this.IconPadding2" type="System.Int32, mscorlib">
     <value>0</value>
-  </data>
-  <data name="lblID.Text" xml:space="preserve">
-    <value>ID:</value>
   </data>
   <data name="comboBox1.Size" type="System.Drawing.Size, System.Drawing">
     <value>224, 24</value>
@@ -2574,8 +2568,8 @@
   <data name="comboBox2.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
   </data>
-  <data name="&gt;&gt;lblTotalSum.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="comboBox2.IconPadding" type="System.Int32, mscorlib">
+    <value>0</value>
   </data>
   <data name="&gt;&gt;label1.Name" xml:space="preserve">
     <value>label1</value>
@@ -2673,8 +2667,8 @@
   <data name="lblFirstName.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="comboBox2.IconPadding" type="System.Int32, mscorlib">
-    <value>0</value>
+  <data name="lblExcessMon.Location" type="System.Drawing.Point, System.Drawing">
+    <value>9, 140</value>
   </data>
   <data name="lblTable.Size" type="System.Drawing.Size, System.Drawing">
     <value>67, 25</value>
@@ -2781,8 +2775,8 @@
   <data name="btnCancel.IconPadding1" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
-  <data name="lblGrandTotal.IconAlignment" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
-    <value>MiddleRight</value>
+  <data name="$this.Error1" xml:space="preserve">
+    <value />
   </data>
   <data name="dataGridView1.IconPadding" type="System.Int32, mscorlib">
     <value>0</value>
@@ -2799,11 +2793,14 @@
   <data name="btnSave.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="lblGrandTotal.IconAlignment" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
+    <value>MiddleRight</value>
+  </data>
   <data name="lblTotal.Size" type="System.Drawing.Size, System.Drawing">
     <value>57, 20</value>
   </data>
-  <data name="btnSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>89, 32</value>
+  <data name="lblNoneName.Text" xml:space="preserve">
+    <value>Needn't write Cus</value>
   </data>
   <data name="txtSearchName.IconAlignment2" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
     <value>MiddleRight</value>
@@ -2852,6 +2849,9 @@
   </data>
   <data name="dataGridViewTextBoxColumn4.MinimumWidth" type="System.Int32, mscorlib">
     <value>6</value>
+  </data>
+  <data name="&gt;&gt;txtSearchName.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="txtID.IconAlignment" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
     <value>MiddleRight</value>
@@ -2928,8 +2928,8 @@
   <data name="lblTotal.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="lblOr.Error1" xml:space="preserve">
-    <value />
+  <data name="btnSave.Size" type="System.Drawing.Size, System.Drawing">
+    <value>89, 32</value>
   </data>
   <data name="panel1.Error2" xml:space="preserve">
     <value />
@@ -3078,8 +3078,8 @@
   <data name="panel3.IconAlignment2" type="System.Windows.Forms.ErrorIconAlignment, System.Windows.Forms">
     <value>MiddleRight</value>
   </data>
-  <data name="btnSearch.IconPadding" type="System.Int32, mscorlib">
-    <value>0</value>
+  <data name="lblID.Text" xml:space="preserve">
+    <value>ID:</value>
   </data>
   <data name="&gt;&gt;txtEmail.Type" xml:space="preserve">
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
