--- a/CoffeeShopManager/GUI/frmAddSupplier.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmAddSupplier.vi-VN.resx
@@ -196,4 +196,8 @@
   <data name="label1.Text" xml:space="preserve">
     <value>Thêm nhà cung cấp</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
 </root>
