--- a/CoffeeShopManager/GUI/frmChangeAuthCodeShop.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmChangeAuthCodeShop.vi-VN.resx
@@ -205,6 +205,10 @@
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="btnExit.Location" type="System.Drawing.Point, System.Drawing">
     <value>429, 0</value>
   </data>
