--- a/CoffeeShopManager/GUI/frmChangePassword.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmChangePassword.vi-VN.resx
@@ -127,6 +127,10 @@
   <data name="TitleBar.Size" type="System.Drawing.Size, System.Drawing">
     <value>458, 30</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="btnSaveChange.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
   </data>
