--- a/CoffeeShopManager/GUI/frmEditEmployees.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmEditEmployees.vi-VN.resx
@@ -319,6 +319,10 @@
   <data name="label3.Text" xml:space="preserve">
     <value>Sửa nhân viên</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="errorProvider1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
