--- a/CoffeeShopManager/GUI/frmEditStockItem.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmEditStockItem.vi-VN.resx
@@ -197,7 +197,7 @@
     <value>Tahoma, 9pt</value>
   </data>
   <data name="lblListCaption.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 18</value>
+    <value>189, 18</value>
   </data>
   <data name="lblListCaption.Text" xml:space="preserve">
     <value>Danh sách sản phẩm dùng </value>
@@ -222,5 +222,9 @@
   </data>
   <data name="label1.Text" xml:space="preserve">
     <value>Sửa hàng hóa trong kho</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
   </data>
 </root>
