--- a/CoffeeShopManager/GUI/frmEditStockItem.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmEditStockItem.vi-VN.resx
@@ -122,10 +122,10 @@
     <value>Tahoma, 7.8pt</value>
   </data>
   <data name="lblRemoveFromList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 17</value>
+    <value>151, 17</value>
   </data>
   <data name="lblRemoveFromList.Text" xml:space="preserve">
-    <value>      Xóa khỏi list</value>
+    <value>      Xóa khỏi danh sách</value>
   </data>
   <data name="lblAddToList.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
@@ -134,10 +134,10 @@
     <value>394, 317</value>
   </data>
   <data name="lblAddToList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>113, 17</value>
+    <value>161, 17</value>
   </data>
   <data name="lblAddToList.Text" xml:space="preserve">
-    <value>      Thêm vào list</value>
+    <value>      Thêm vào danh sách</value>
   </data>
   <data name="btnCancel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
