--- a/CoffeeShopManager/GUI/UserControlEmployeeUserTab.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlEmployeeUserTab.vi-VN.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="datBirthdate.CustomFormat" xml:space="preserve">
+    <value>dd/MM/yyyy</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="datBirthdate.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
@@ -484,6 +487,9 @@
   </data>
   <data name="txtSalary.Size" type="System.Drawing.Size, System.Drawing">
     <value>110, 23</value>
+  </data>
+  <data name="datDateOfJoin.CustomFormat" xml:space="preserve">
+    <value>dd/MM/yyyy</value>
   </data>
   <data name="datDateOfJoin.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
