--- a/CoffeeShopManager/GUI/frmAddTable.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmAddTable.vi-VN.resx
@@ -121,6 +121,9 @@
   <data name="lblTitle.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 10.2pt</value>
   </data>
+  <data name="lblTitle.Location" type="System.Drawing.Point, System.Drawing">
+    <value>124, 9</value>
+  </data>
   <data name="lblTitle.Size" type="System.Drawing.Size, System.Drawing">
     <value>84, 21</value>
   </data>
@@ -140,7 +143,7 @@
     <value>Tahoma, 7.8pt</value>
   </data>
   <data name="lblCancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>185, 119</value>
+    <value>191, 119</value>
   </data>
   <data name="lblCancel.Size" type="System.Drawing.Size, System.Drawing">
     <value>33, 17</value>
@@ -150,6 +153,9 @@
   </data>
   <data name="lblAdd.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 7.8pt</value>
+  </data>
+  <data name="lblAdd.Location" type="System.Drawing.Point, System.Drawing">
+    <value>108, 119</value>
   </data>
   <data name="lblAdd.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 17</value>
